--- a/Movie/Movie/View/Cell/MovieListTableViewCell.xib
+++ b/Movie/Movie/View/Cell/MovieListTableViewCell.xib
@@ -52,15 +52,14 @@
                                 <rect key="frame" x="255" y="24" width="46" height="46"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VFm-ba-MQh">
-                                        <rect key="frame" x="11" y="12.5" width="24" height="21.5"/>
-                                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <rect key="frame" x="7" y="8.5" width="32" height="29.5"/>
+                                        <color key="tintColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="24" id="gZ0-Up-5oz"/>
-                                            <constraint firstAttribute="height" constant="24" id="r3P-G8-Vn7"/>
+                                            <constraint firstAttribute="width" constant="32" id="gZ0-Up-5oz"/>
+                                            <constraint firstAttribute="height" constant="32" id="r3P-G8-Vn7"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="VFm-ba-MQh" firstAttribute="centerY" secondItem="m3f-VD-BiJ" secondAttribute="centerY" id="8hv-D8-mCT"/>
                                     <constraint firstAttribute="height" constant="46" id="dsm-6D-ZiG"/>
