--- a/Movie/Movie/Resource/Base.lproj/Main.storyboard
+++ b/Movie/Movie/Resource/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,53 +19,53 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4fW-XO-f3S">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="108"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9VJ-op-xCe">
-                                                <rect key="frame" x="24" y="33.5" width="100" height="41"/>
+                                                <rect key="frame" x="32" y="23.5" width="100" height="41"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="30"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="MkG-Jt-T3S">
-                                                <rect key="frame" x="330" y="24" width="60" height="60"/>
+                                                <rect key="frame" x="342" y="24" width="40" height="40"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="60" id="Gha-io-3WV"/>
-                                                    <constraint firstAttribute="height" constant="60" id="ix3-qZ-kdV"/>
+                                                    <constraint firstAttribute="width" constant="40" id="Gha-io-3WV"/>
+                                                    <constraint firstAttribute="height" constant="40" id="ix3-qZ-kdV"/>
                                                 </constraints>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vxz-41-Q4X">
-                                                <rect key="frame" x="299" y="36.5" width="1" height="35"/>
-                                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                                <rect key="frame" x="325" y="26.5" width="1" height="35"/>
+                                                <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="1" id="9f8-Qs-jlC"/>
                                                     <constraint firstAttribute="height" constant="35" id="pFo-wY-pgX"/>
                                                 </constraints>
                                             </view>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="129349963_143308623847962_7321864260905310224_n (1)" translatesAutoresizingMaskIntoConstraints="NO" id="HRA-PP-cbv">
-                                                <rect key="frame" x="229" y="34" width="30" height="40"/>
-                                                <color key="tintColor" systemColor="opaqueSeparatorColor"/>
+                                                <rect key="frame" x="279" y="29" width="30" height="30"/>
+                                                <color key="tintColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="30" id="NUu-5l-l63"/>
-                                                    <constraint firstAttribute="height" constant="40" id="VzU-nv-nn2"/>
+                                                    <constraint firstAttribute="height" constant="30" id="VzU-nv-nn2"/>
                                                 </constraints>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
                                             <constraint firstItem="MkG-Jt-T3S" firstAttribute="centerY" secondItem="9VJ-op-xCe" secondAttribute="centerY" id="00X-Kr-w6k"/>
                                             <constraint firstItem="HRA-PP-cbv" firstAttribute="centerY" secondItem="9VJ-op-xCe" secondAttribute="centerY" id="1tR-aZ-sfB"/>
-                                            <constraint firstAttribute="trailing" secondItem="MkG-Jt-T3S" secondAttribute="trailing" constant="24" id="650-wt-7or"/>
+                                            <constraint firstAttribute="trailing" secondItem="MkG-Jt-T3S" secondAttribute="trailing" constant="32" id="650-wt-7or"/>
                                             <constraint firstItem="Vxz-41-Q4X" firstAttribute="centerY" secondItem="9VJ-op-xCe" secondAttribute="centerY" id="9XJ-mY-dxc"/>
-                                            <constraint firstItem="9VJ-op-xCe" firstAttribute="leading" secondItem="4fW-XO-f3S" secondAttribute="leading" constant="24" id="DZ9-LK-Avf"/>
+                                            <constraint firstItem="9VJ-op-xCe" firstAttribute="leading" secondItem="4fW-XO-f3S" secondAttribute="leading" constant="32" id="DZ9-LK-Avf"/>
                                             <constraint firstItem="MkG-Jt-T3S" firstAttribute="top" secondItem="4fW-XO-f3S" secondAttribute="top" constant="24" id="ZNQ-9L-we7"/>
-                                            <constraint firstItem="MkG-Jt-T3S" firstAttribute="leading" secondItem="Vxz-41-Q4X" secondAttribute="trailing" constant="30" id="cVv-gJ-CaS"/>
+                                            <constraint firstItem="MkG-Jt-T3S" firstAttribute="leading" secondItem="Vxz-41-Q4X" secondAttribute="trailing" constant="16" id="cVv-gJ-CaS"/>
                                             <constraint firstAttribute="bottom" secondItem="MkG-Jt-T3S" secondAttribute="bottom" constant="24" id="j68-fQ-6Yx"/>
-                                            <constraint firstItem="Vxz-41-Q4X" firstAttribute="leading" secondItem="HRA-PP-cbv" secondAttribute="trailing" constant="40" id="ocE-OT-wAF"/>
+                                            <constraint firstItem="Vxz-41-Q4X" firstAttribute="leading" secondItem="HRA-PP-cbv" secondAttribute="trailing" constant="16" id="ocE-OT-wAF"/>
                                         </constraints>
                                     </view>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="SNj-94-YcM">
-                                        <rect key="frame" x="32" y="108" width="350" height="51"/>
+                                        <rect key="frame" x="32" y="88" width="350" height="51"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="350" id="lQ6-YW-Jdl"/>
                                             <constraint firstAttribute="height" constant="50" id="vBx-4Z-xKx"/>
@@ -76,14 +74,14 @@
                                             <segment title="Now Showing"/>
                                             <segment title="Coming Soon"/>
                                         </segments>
-                                        <color key="selectedSegmentTintColor" systemColor="systemOrangeColor"/>
+                                        <color key="selectedSegmentTintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </segmentedControl>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="N7c-8P-fbL">
-                                        <rect key="frame" x="0.0" y="182" width="414" height="636"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <rect key="frame" x="0.0" y="162" width="414" height="656"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     </tableView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="N7c-8P-fbL" secondAttribute="trailing" id="0uV-fJ-NcC"/>
                                     <constraint firstAttribute="trailing" secondItem="4fW-XO-f3S" secondAttribute="trailing" id="4QL-QA-9Mg"/>
@@ -97,16 +95,17 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="vaS-8t-Xkt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GpW-rE-zQM"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vaS-8t-Xkt" secondAttribute="bottom" id="Jtq-Uj-zD8"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vaS-8t-Xkt" secondAttribute="trailing" id="ni4-1d-y2c"/>
                             <constraint firstItem="vaS-8t-Xkt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="oA3-k7-GgQ"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="imgProfile" destination="MkG-Jt-T3S" id="t0e-qQ-Vpo"/>
                         <outlet property="movieListTableView" destination="N7c-8P-fbL" id="Mcl-pi-J51"/>
                         <outlet property="scMovieTab" destination="SNj-94-YcM" id="c24-VC-s3z"/>
                     </connections>
@@ -119,17 +118,5 @@
     <resources>
         <image name="129349963_143308623847962_7321864260905310224_n (1)" width="25" height="25"/>
         <image name="profile" width="225" height="225"/>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray3Color">
-            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
