--- a/Movie/Movie/View/Cell/CastListCollectionViewCell.xib
+++ b/Movie/Movie/View/Cell/CastListCollectionViewCell.xib
@@ -1,64 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CastListCollectionViewCell" customModule="Movie" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="80" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="130" height="175"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="80" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="130" height="175"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0aD-xc-gae">
-                        <rect key="frame" x="4" y="4" width="72" height="92"/>
+                        <rect key="frame" x="0.0" y="0.0" width="130" height="175"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="drt-DJ-Pe2">
-                                <rect key="frame" x="0.0" y="0.0" width="72" height="92"/>
-                                <color key="backgroundColor" red="0.65492355820000003" green="0.24629747869999999" blue="0.23075950149999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="drt-DJ-Pe2">
+                                <rect key="frame" x="15" y="0.0" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="OrH-Iw-qpK"/>
+                                    <constraint firstAttribute="height" constant="100" id="vqK-R2-EgW"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E99-80-8re">
-                                <rect key="frame" x="8" y="80.5" width="56" height="7.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="6"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E99-80-8re">
+                                <rect key="frame" x="8" y="108" width="114" height="59"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="drt-DJ-Pe2" firstAttribute="top" secondItem="0aD-xc-gae" secondAttribute="top" id="0H7-4o-3rF"/>
-                            <constraint firstItem="drt-DJ-Pe2" firstAttribute="leading" secondItem="0aD-xc-gae" secondAttribute="leading" id="1TZ-lZ-PHp"/>
-                            <constraint firstItem="E99-80-8re" firstAttribute="leading" secondItem="0aD-xc-gae" secondAttribute="leading" constant="8" id="Rim-N3-cLI"/>
-                            <constraint firstAttribute="bottom" secondItem="drt-DJ-Pe2" secondAttribute="bottom" id="Tgd-Tz-vlo"/>
-                            <constraint firstAttribute="trailing" secondItem="drt-DJ-Pe2" secondAttribute="trailing" id="ctV-tl-xb9"/>
-                            <constraint firstAttribute="bottom" secondItem="E99-80-8re" secondAttribute="bottom" constant="4" id="d9S-sc-p2j"/>
-                            <constraint firstAttribute="trailing" secondItem="E99-80-8re" secondAttribute="trailing" constant="8" id="mS2-dz-qxg"/>
+                            <constraint firstItem="drt-DJ-Pe2" firstAttribute="centerX" secondItem="0aD-xc-gae" secondAttribute="centerX" id="3MW-CR-WUi"/>
+                            <constraint firstItem="E99-80-8re" firstAttribute="leading" secondItem="0aD-xc-gae" secondAttribute="leading" constant="8" id="A2F-N3-kaB"/>
+                            <constraint firstAttribute="bottom" secondItem="E99-80-8re" secondAttribute="bottom" constant="8" id="RD6-KN-6EY"/>
+                            <constraint firstAttribute="trailing" secondItem="E99-80-8re" secondAttribute="trailing" constant="8" id="bSN-wY-jTp"/>
+                            <constraint firstItem="E99-80-8re" firstAttribute="top" secondItem="drt-DJ-Pe2" secondAttribute="bottom" constant="8" id="jLC-f1-nZF"/>
+                            <constraint firstItem="drt-DJ-Pe2" firstAttribute="top" secondItem="0aD-xc-gae" secondAttribute="top" id="uHN-Wt-hYr"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
-            <constraints>
-                <constraint firstItem="0aD-xc-gae" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="9qH-RU-7Ti"/>
-                <constraint firstAttribute="trailing" secondItem="0aD-xc-gae" secondAttribute="trailing" constant="4" id="TRq-rm-Dgm"/>
-                <constraint firstItem="0aD-xc-gae" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="mih-zE-43u"/>
-                <constraint firstAttribute="bottom" secondItem="0aD-xc-gae" secondAttribute="bottom" constant="4" id="tnG-Rs-Xy3"/>
-            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="72" height="87"/>
+            <constraints>
+                <constraint firstItem="0aD-xc-gae" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="3KA-hX-vo9"/>
+                <constraint firstAttribute="bottom" secondItem="0aD-xc-gae" secondAttribute="bottom" id="aVb-x4-wlj"/>
+                <constraint firstItem="0aD-xc-gae" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="cY7-lf-gje"/>
+                <constraint firstAttribute="trailing" secondItem="0aD-xc-gae" secondAttribute="trailing" id="g1H-gS-qtZ"/>
+            </constraints>
+            <size key="customSize" width="98" height="161.5"/>
             <connections>
                 <outlet property="imgCast" destination="drt-DJ-Pe2" id="yPw-9f-yh0"/>
                 <outlet property="lblCastName" destination="E99-80-8re" id="ver-Or-KhI"/>
             </connections>
-            <point key="canvasLocation" x="155.07246376811597" y="97.767857142857139"/>
+            <point key="canvasLocation" x="169.56521739130437" y="122.20982142857142"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="profile" width="225" height="225"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
